--- a/src/main/java/org/dlw/ai/blackboard/package.html
+++ b/src/main/java/org/dlw/ai/blackboard/package.html
@@ -4,7 +4,8 @@
     <TITLE>Package org.dlw.ai.blackboard</TITLE>
   </HEAD>
   <BODY>
-    Package containing objects that orchestrate this application problem set.
+    Package containing objects that orchestrate this application problem set. This package
+    represents a default implementation of the blackboard framework.
     @since 1.0
   </BODY>
 </HTML>
